--- a/src/App.scss
+++ b/src/App.scss
@@ -168,6 +168,7 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .people {
@@ -237,6 +238,7 @@ body {
 .messages {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10vw;
   font-weight: bold;
 }
